# AI.R-RoboDog

./: .gitignore  .gitmodules  GUIDE.md  README.md  high_state_plot.m
catkin_ws/src/: .rosinstall
catkin_ws/src/robotdog/: CMakeLists.txt  package.xml
catkin_ws/src/robotdog/datas/: roll_data.csv
catkin_ws/src/robotdog/include/: convert.h
catkin_ws/src/robotdog/include/common/: enumClass.h  mathTools.h  mathTypes.h  trajectory.h  waypoint.h
catkin_ws/src/robotdog/include/traj/: roll.h
catkin_ws/src/robotdog/include/utils/: convert.h  kinematic.h
catkin_ws/src/robotdog/launch/: bringup.launch  high_state_logger.launch
catkin_ws/src/robotdog/src/: cmd_dispatcher.cpp  crouch.cpp  crouch_srv.cpp  give_paw_srv.cpp  keyboard_cmd.cpp  motor_pose.cpp  sit.cpp  sit_srv.cpp  stand_up.cpp  stand_up_srv.cpp  state_pub.cpp  udp_pub_sub.cpp  udp_ros.cpp
catkin_ws/src/robotdog/src/cmd/: cmd_dispatcher.cpp  keyboard_cmd.cpp
catkin_ws/src/robotdog/src/movement_servers/: crouch_srv.cpp  give_paw_srv.cpp  roll_srv.cpp  sit_srv.cpp  stand_up_srv.cpp
catkin_ws/src/robotdog/src/udp/: high_state_logger.cpp  udp_listen.cpp  udp_ros.cpp
